Attempt logo alignment fix

--- a/qtify/src/components/Navbar/Navbar.module.css
+++ b/qtify/src/components/Navbar/Navbar.module.css
@@ -5,8 +5,7 @@
   width: 100%;
   box-sizing: border-box;
 
-    padding-left: 16px;
-  padding-right: 32px;
+  padding: 0 16px;
 
   display: flex;
   align-items: center;
